--- a/public/styles.css
+++ b/public/styles.css
@@ -1,15 +1,44 @@
 /* main style file */
 * {
     box-sizing: border-box;
+    font-family: 'Fira Sans', sans-serif;
+}
+
+body {
+    background: #fcfbf7;
+}
+
+.content {
+    display: flex;
+    justify-content: space-around;
+    width: 75%;
+    padding-top: 25px;
+    margin: auto;
+}
+
+@media screen and (max-width: 800px) {
+    .content {
+        flex-direction: column;
+        gap: 50px;
+    }
 }
 
 main {
     text-align: center;
-    padding-top: 100px;
+
 }
 
 .titleSection {
     margin-bottom: 75px;
+}
+
+.title {
+    margin-top: 100px;
+    text-align: center;
+}
+
+.subTitle {
+    font-size: 1rem;
 }
 
 .positiveMoodNum {
@@ -35,8 +64,22 @@ main {
 
 .submitButton {
     margin-top: 50px;
-    background: #155225;
+    background: #0015ff;
     padding: .75rem 1.25rem;
     border: none;
     color: white;
+}
+
+.submitButton:hover {
+    cursor: pointer;
+    background: #000c91;
+}
+
+
+
+.datesList {
+    display: flex;
+    flex-direction: column-reverse;
+    list-style: none;
+    font-size: 1.25rem;
 }
